--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,40 +1,56 @@
 /* GLOBAL */
-body{
+
+body {
     display: grid;
     /* grid-template-columns:  */
-    grid-template-areas: 
-    "I I I I"
-    "II II II II"
-    "II II II II"
-    "III III III III";
-
+    grid-template-areas: "I I I I" "II II II II" "II II II II" "III III III III";
     grid-gap: 20px;
+    background: linear-gradient(red, silver, black, red, silver);
 }
 
 /* HEADING */
 
-.header{
+.header {
     grid-area: I;
-    width: 50%;
-    background-color: blueviolet;
+    width: 100vw;
+    text-align: center;
+    font-family: cursive;
+}
 
+/* NAVBAR */
+
+span {
+    position: fixed;
+    font-size: 40px;
+}
+
+.navigation {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #777;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
 }
 
 /* BEGIN CONTENT */
 
-.content{
+.content {
     grid-area: II;
-
 }
 
 /* OPENER */
 
-.open-parallax{
+.open-parallax {
     background: url(/IMAGES/headphones-laptop.jpg) fixed center;
     background-size: 100%;
 }
 
-.openText{
+.openText {
     padding: 200px;
     text-align: center;
     color: white;
@@ -44,12 +60,12 @@ body{
 
 /* PROFILE */
 
-.profile{
-    background: url(/IMAGES/Ahkiem-profile.jpeg) fixed center no-repeat;
+.profile {
+    background: url(/IMAGES/headshot-of-x2.jpg) fixed center no-repeat;
     background-size: 65%;
 }
 
-.profileStory{
+.profileStory {
     padding: 350px;
     text-align: center;
     color: white;
@@ -58,12 +74,12 @@ body{
 
 /* EXPERIENCE */
 
-.experience{
+.experience {
     background: url(/IMAGES/laptop-backdrop.jpeg) fixed center;
     background-size: 100%;
 }
 
-.exp{
+.exp {
     padding: 300px;
     font-size: 25px;
     text-align: top;
@@ -71,15 +87,13 @@ body{
     color: white;
 }
 
-.projects{
+.projects {
     background: url(/IMAGES/headphones-worktable.jpg) fixed center no-repeat;
     background-size: 100%;
 }
 
-.projectTxt{
+.projectTxt {
     padding: 400px;
     color: red;
     font-size: 30px;
 }
-
-
